Fix a horizontal scroll bar sometimes showing

--- a/components/WorshipStick/styles.module.scss
+++ b/components/WorshipStick/styles.module.scss
@@ -3,6 +3,7 @@
   position: relative;
   font-size: 0; // Remove the 4px vertical space between consecutive block elements.
   transition: transform 4s ease-in-out;
+  overflow: hidden;
 }
 
 .base {
